2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2008-11-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'canvas' added, providing
	* modules/canvas:        extended canvas widgets.

2008-11-04  Andreas Kupries  <andreask@activestate.com>

	* installed_modules.tcl: New module 'crosshair' added, providing
	* modules/crosshair: cross-hairs in canvas widgets.

2008-05-01  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (gd-gen-tap): Added hacks to get proper tap definitions
	  for Tablelist and its related packages.

2008-02-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* installed_modules.tcl:
	* examples/widget/screenruler.tcl: Added widget::screenruler example

2007-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/chatwidget:    Added a new widget: 'chatwidget'
	* installed_modules.tcl: 

2007-09-26  Andreas Kupries  <andreask@activestate.com>

	* installed_modules.tcl: Added 'diagrams' to the list of installed
	  modules.

2007-06-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* examples/ntext/*.tcl (new): examples for ntext module

2007-06-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* installed_modules.tcl: added ntext module

2006-08-28  Andreas Kupries <andreask@activestate.com>

	* PACKAGES:               Reverted changes to the files describing
	* README-0.4.txt:         the last release. At least PACKAGES is
	                          needed unchanged to enable the comparison
	                          of the last release to the current state.

2006-08-27  Kevin B. Kenny  <kennykb@acm.org>

	* PACKAGES:               Added KHIM (Kevin's Hacky Input Method)
	* README-0.4.txt:         to the module list for installation and
	* installed_modules.tcl:  documentation.  Added rules to
	* install_actions.tcl:    'install_actions' to install message
	                          catalogs.